<resources>
    <string name="app_name">Gitterbomb</string>

    <string name="github_avatar_prefix">https://avatars2.githubusercontent.com/</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="menu_direct_chat">Direct Chat</string>
    <string name="menu_starred">Starred</string>
    <string name="menu_channels">Channels</string>
    <string name="menu_repos">Repos</string>
    <string name="menu_orgs">Orgs</string>
    <string name="hipster_ipsum">Four dollar toast gastropub yr taxidermy literally food truck, try-hard craft beer chia tacos austin ugh lo-fi readymade echo park. Leggings aesthetic art party skateboard brunch. Pabst vegan retro, plaid drinking vinegar godard banh mi. Tumblr craft beer shabby chic, readymade 8-bit banh mi authentic sustainable heirloom celiac scenester etsy.</string>
    <string name="menu_message_edit">Edit</string>
    <string name="menu_message_copy">Copy Text</string>
    <string name="menu_explore">Explore</string>
    <string name="send_message">Send Message</string>
</resources>
